@@ -1,5 +1,3 @@
-if [ "$TERM_TYPE" = virtual -a -e /dev/fb/0 ]; then
-	if [ "`debconf-get debian-installer/framebuffer`" = true ]; then
-		TERM_FRAMEBUFFER=yes
-	fi
+if [ -n "$TERM_FRAMEBUFFER_TRY" -a -e /dev/fb/0 ]; then
+	TERM_FRAMEBUFFER=yes
 fi
