@@ -1,11 +1,9 @@
-# init will restart this script when it exits.  This will let us pick another
-# frontend every time main-menu exits
 if [ -z "$DEBIAN_FRONTEND" ] ; then
     for frontend in gtk newt slang text ; do
         if [ -e "/usr/lib/cdebconf/frontend/$frontend.so" ] ; then
             DEBIAN_FRONTEND=$frontend
-            export DEBIAN_FRONTEND
             break
         fi
     done
 fi
+export DEBIAN_FRONTEND
