@@ -2,8 +2,11 @@ rootskel (0.86) UNRELEASED; urgency=low
 
   * Bastian Blank
     - Make sure that debconf exits before we mount readonly.
+    - Load framebuffer module only once and only on virtual terminal
+      (closes: #259950).
+    - Don't overwrite terminal type if there is one set.
 
- -- Bastian Blank <waldi@debian.org>  Sun, 11 Jul 2004 17:52:52 +0200
+ -- Bastian Blank <waldi@debian.org>  Wed, 14 Jul 2004 11:56:31 +0200
 
 rootskel (0.85) unstable; urgency=low
 
